# limit-order-proto

./: Cargo.toml  README.md
casper-contract-proto/: Cargo.toml  README.md  compile.sh
casper-contract-proto/src/: main.rs  market.rs  orders.rs
casper-contract-tests/: Cargo.toml
casper-contract-tests/binaries/: casper-contract-proto-optimized.wasm  cep18-optimized.wasm  cspr-session-optimized.wasm
casper-contract-tests/src/: integration_tests.rs  lib.rs
casper-contract-tests/src/test_fixture/: mod.rs
cspr-session/: Cargo.toml  compile.sh  rust-toolchain.toml
cspr-session/src/: main.rs
limit-order-proto/: Cargo.toml
limit-order-proto/src/: storage.rs
src/: lib.rs  market.rs  storage.rs
