[package]
name = "casper-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
casper-engine-test-support = {version="7.0.0", default-features=false}
casper-execution-engine = {version="7.0.0", default-features=false}
casper-contract = {version="4.0.0", default-features=false}
casper-types = {version="4.0.1", default-features=false}
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
rand = "0.8"
